# document_owner_recognize

./: .gitignore
.cache/clangd/index/: main.cpp.986FFD0A9A602101.idx
corners/: main.cpp
lines/: CMakeLists.txt  main.cpp
qtProgramm/: .clang-tidy  CMakeLists.txt  Recognizer.cpp  Recognizer.h  compile_commands.json  main.cpp  mainwindow.cpp  mainwindow.h
qtProgramm/.cache/clangd/index/: main.cpp.7506F779312C8639.idx  mainwindow.cpp.1F9DAD90984AA722.idx  mainwindow.h.F209596528681854.idx  moc_mainwindow.cpp.7F8EC7824BCEC51D.idx  mocs_compilation.cpp.CFBF43041D827416.idx
rectangles/: .clang-tidy  CMakeLists.txt  main.cpp
test_load_model/: CMakeLists.txt  compile_commands.json  main.cpp
test_load_model/.cache/clangd/index/: main.cpp.C240635C10E772E0.idx
